classDiagram
  namespace NEW_Models {
    class Category {
      <<MODIFIED>>
      + id : Long
      + name : String
      + color : Int
      + icon : String
      + description : String
      + isDefault : Boolean
      + keywords : String
      + keywordIsRegex : Boolean
      %% ── NEW fields ──
      + plainKeywords : String
      + regexPatterns : String
    }
  }

  namespace NEW_Modified_Models {
    class Message {
      <<MODIFIED>>
      + id : Long
      + body : String
      + threadId : Long
      %% ── NEW fields ──
      + categoryName : String
      + categoryId : Long
    }
    class Conversation {
      <<MODIFIED>>
      + threadId : Long
      + snippet : String
      %% ── NEW field ──
      + category : String
    }
  }

  namespace NEW_Dialogs {
    class AddOrEditCategoryDialog {
      <<NEW>>
      - originalCategory : Category?
      - currentKeywords : List~KeywordItem~
    }
  }

  namespace NEW_Activities {
    class ManageCategoriesActivity {
      <<NEW>>
      + updateCategories() void
      + addOrEditCategory() void
      + askConfirmDelete() void
    }
    class ConversationDetailFragment {
      <<NEW - two-pane/foldable>>
      + threadAdapter : ThreadAdapter
    }
  }

  namespace NEW_Adapters {
    class CategoryAdapter {
      <<NEW>>
      + updateItems() void
      - setupView() void
    }
  }

  namespace MODIFIED_ContextKt {
    class ContextKt {
      <<MODIFIED - category extensions added>>
      %% ── NEW methods ──
      + getAllCategories() List~Category~
      + getCategoryById() Category?
      + createCategory() void
      + updateCategory() void
      + deleteCategory() void
      + isMessageMatchingCategory() Boolean
      + withAutoCategory() Message
      + filterMessagesByKeywords() List~Message~
      + refreshConversationCategoryLabel() void
      + reclassifyAllCategories() void
      - applyCategoryToExistingMessages() void
      - replaceCategoryNameInConversations() void
      - removeCategoryNameFromConversations() void
      + assignMessageToCategory() void
      + getDefaultCategory() Category?
      + getMessagesByCategory() List~Message~
    }
  }
  %% Activities
  ManageCategoriesActivity --> CategoryAdapter : displays
  ManageCategoriesActivity --> AddOrEditCategoryDialog : launches
  ManageCategoriesActivity --> ContextKt : deleteCategory()
  CategoryAdapter --> Category : binds
  %% Message flow with auto-category
  Message --> Category : categoryId / categoryName ref
  Conversation --> Category : category string label ref
